[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaurn"
version = "0.0.7"
authors = [
  { name="Anthony Walker", email="walker.anthony91@gmail.com" },{ name="Robin Wilson", email="robin@rtwilson.com" }
]
description = "Package to import AURN air quality data from DEFRA UK AIR site"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pyreadr","pandas","tqdm"]

[project.urls]
"Homepage" = "https://github.com/airqualityanthony/PyAURN"
"Bug Tracker" = "https://github.com/airqualityanthony/PyAURN/issues"