[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaurn"
version = "0.1.2"
authors = [
  { name="Anthony Walker", email="walker.anthony91@gmail.com" },{ name="Robin Wilson", email="robin@rtwilson.com" }
]
description = "Package to import air quality data from UK and European sites. Mirrors the functionality of the R package 'openair'."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pyreadr","pandas","tqdm","windrose"]

[project.urls]
"Homepage" = "https://github.com/robintw/PyAURN"
"Bug Tracker" = "https://github.com/robintw/PyAURN/issues"